--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,8 @@
         "react/jsx-indent-props": ["error", 4],
         "max-len": ["error", { "code": 100, "ignoreUrls": true, "ignoreComments": true }],
         "keyword-spacing": "warn",
-        "space-infix-ops": "error"
+        "space-infix-ops": "error",
+        "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+        "react/prop-types":"off"
     }
 }
