Update project details

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "loopsim-frontend",
+  "name": "dhg-workflow",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nisyslab.github.io/DHGWorkflow",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -27,6 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-localhost": "PUBLIC_URL=/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
