--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cytoscape": "^3.19.0",
+    "cytoscape-automove": "^1.10.2",
+    "cytoscape-edgehandles": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
