--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cytoscape": "^3.19.0",
     "cytoscape-automove": "^1.10.2",
     "cytoscape-edgehandles": "^3.6.0",
+    "cytoscape-grid-guide": "^2.3.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
