Graph: Resize nodes on canvas itself

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cytoscape-automove": "^1.10.2",
     "cytoscape-edgehandles": "^3.6.0",
     "cytoscape-grid-guide": "^2.3.2",
+    "cytoscape-node-editing": "^4.0.0",
     "file-saver": "^2.0.5",
+    "jquery": "^3.0.0",
+    "konva": "^7.0.3",
     "rc-slider": "^9.7.2",
     "rc-switch": "^3.2.2",
     "react": "^17.0.2",
