--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3",
+    "xml2js": "^0.4.23",
     "zealit": "^2.4.1"
   },
   "scripts": {
