--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
 name: Build and Deploy
-on:
-  push:
-    branches: [ main ]
+on: workflow_dispatch
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
